<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	    android:paddingTop="5dp"
	    android:paddingLeft="5dp"
	    >
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_task"
			android:textSize="15sp"
			/>
	    <TextView
			android:id="@+id/label_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="15sp"
			/>
	</LinearLayout>
    
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="10dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingBottom="10dp"
	    >
		<TextView
			android:id="@+id/label_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="22sp"
			android:background="@drawable/text_title_timing"
			android:gravity="center"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
		/>
	</LinearLayout>
    
    <!-- 計測値 -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="10dp"
	   	android:paddingBottom="5dp"
	    >
		<TextView
			android:id="@+id/label_hour"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:text="@string/label_init"
			/>
		<TextView
			android:id="@+id/label_separator1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:text="@string/label_separator"
			/>
		<TextView
			android:id="@+id/label_minute"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:text="@string/label_init"
			/>
		<TextView
			android:id="@+id/label_separator2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:text="@string/label_separator"
			/>
		<TextView
			android:id="@+id/label_second"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="40sp"
			android:text="@string/label_init"
			/>
	</LinearLayout>
	
	<!-- ボタン -->
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:baselineAligned="false"
	    android:gravity="center"
	    android:padding="10dp"
	    >
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:paddingRight="5dp"
		    >
			<ImageButton
				android:id="@+id/button_time" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="fitEnd"
				android:contentDescription="@string/button_start"
				android:background="@drawable/button_start" />
		</LinearLayout>
		<LinearLayout
		    android:orientation="horizontal"
			android:layout_width="0dp"
			android:layout_weight="1"
		    android:layout_height="wrap_content"
		    android:gravity="left"
		    android:paddingLeft="5dp"
		    >
		    <ImageButton
	   			android:id="@+id/button_reset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="fitStart"
				android:contentDescription="@string/button_reset"
				android:background="@drawable/button_reset" />
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingTop="20dp"
	    >
		<ImageButton
			android:id="@+id/button_back"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:scaleType="fitStart"
			android:contentDescription="@string/button_back"
			android:background="@drawable/button_back" />
	</LinearLayout>
	
</LinearLayout>
