<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="25dp" >

            <TextView
                android:id="@+id/list_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_init"
                android:textColor="#666666"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingTop="0dp" >

            <!-- time label -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/list_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_init"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/list_separator1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_separator"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/list_minute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_init"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/list_separator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_separator"
                    android:textColor="#666666"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/list_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_init"
                    android:textColor="#666666"
                    android:textSize="20sp" />
            </LinearLayout>

            <!-- button -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/list_space1"
                    android:layout_width="30dp"
                    android:layout_height="40dp" />

                <ImageButton
                    android:id="@+id/button_toTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/timeDesc"
                    style="@style/style_button_time" />
                
                <TextView
                    android:id="@+id/list_space2"
                    android:layout_width="30dp"
                    android:layout_height="40dp" />
            </LinearLayout>
        </LinearLayout>

        <!-- title -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/list_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/text_title"
                android:focusable="false"
                android:maxLength="30"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <!-- line -->

    <TextView
        android:id="@+id/list_line"
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_timelist" />

</LinearLayout>